...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/step_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="8dp"
                android:paddingEnd="10dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
...
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:text="0" />


            <TextView
                android:id="@+id/step_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
...
