<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_ingredient"
        android:enabled="true"
        android:title="@string/ingredients" />
    <item
        android:id="@+id/nav_steps"
        android:enabled="true"
        android:title="@string/steps" />

</menu>